--- a/REMTyS/Procfile
+++ b/REMTyS/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn REMTyS.wsgi:application --bind 0.0.0.0:$PORT --access-logfile - --error-logfile - --log-level info
+web: gunicorn REMTyS.wsgi
